2006-04-11 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.4
	* info/patches/maintenance_patches/patch-2.6.16.4: added

2006-04-11 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.3
	* info/patches/maintenance_patches/patch-2.6.16.3: added

2006-04-10 David Brown <dmlb2000@gmail.com>
	* configs: added

2006-04-10 David Brown <dmlb2000@gmail.com>
	* PRE_BUILD: make the mode newktree if it's something not defined

2006-04-10 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rt14
	* info/patches/realtime_patches/patch-2.6.16-rt14: added

2006-04-08 David Brown <dmlb2000@gmail.com>
	* latest.defaults: remove 2.2 and 2.0 kernels

2006-04-08 David Brown <dmlb2000@gmail.com>
	* info/patches/ck_server_patches/patch-2.6.16-cks4: fixed source url and
	  public gpg key
	* info/patches/ck_patches/patch-2.6.16-ck4: fixed source url and public
	  gpg key

2006-04-08 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-cks4
	* info/patches/ck_server_patches/patch-2.6.16-cks4: added

2006-04-08 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-ck4
	* info/patches/ck_patches/patch-2.6.16-ck4: added

2006-04-08 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.17-rc1-mm2
	* info/patches/mm_patches/2.6.17-rc1-mm2: added

2006-04-07 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.2
	* info/patches/maintenance_patches/patch-2.6.16.2: added

2006-04-05 David Brown <dmlb2000@gmail.com>
	* info/patches/reiser4_patches/reiser4-for-2.6.16-1.patch: added

2006-04-04 Ladislav Hagara <hgr@vabo.cz>
	* info/patches/squashfs_patches/squashfs3.0-patch: added

2006-04-04 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.17-rc1-mm1
	* info/patches/mm_patches/2.6.17-rc1-mm1: added

2006-04-04 David Brown <dmlb2000@gmail.com>