@@ -1,3 +1,6 @@
+2006-04-12 David Brown <dmlb2000@gmail.com>
+	* info/patches/sws2_patches/suspend2-2.2.4-for-2.6.16.patch: added
+
 2006-04-11 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.16.4
 	* info/patches/maintenance_patches/patch-2.6.16.4: added
